--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="QUANTITY"
+        android:layout_marginBottom="16dp"
         android:textAllCaps="true" />
+
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:onClick="increment"
+        android:text="+"/>
 
     <TextView
     android:id="@+id/quantity_text_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="0"
+    android:text="2"
     android:textAllCaps="true"
     android:layout_marginTop="16dp"
     android:layout_marginBottom="16dp"
     android:textColor="#000000"
     android:textSize="16sp"/>
+
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:onClick="decrement"
+        android:text="-"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,7 +49,7 @@
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$0"
+        android:text="$10"
         android:textSize="16sp"
         android:textColor="#000000"
         android:layout_marginBottom="16dp"/>
