--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,41 +7,52 @@
     android:orientation="vertical"
     tools:context="com.example.android.justjava.MainActivity">
 
-    <TextView
-        android:id="@+id/quantity"
-        android:layout_width="wrap_content"
+    
+        <TextView
+            android:id="@+id/quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="QUANTITY"
+            android:layout_marginBottom="16dp"
+            android:textAllCaps="true" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="QUANTITY"
-        android:layout_marginBottom="16dp"
-        android:textAllCaps="true" />
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:onClick="increment"
-        android:text="+"/>
+        <Button
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="increment"
+            android:text="+"/>
 
-    <TextView
-    android:id="@+id/quantity_text_view"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="2"
-    android:textAllCaps="true"
-    android:layout_marginTop="16dp"
-    android:layout_marginBottom="16dp"
-    android:textColor="#000000"
-    android:textSize="16sp"/>
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="2"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:onClick="decrement"
-        android:text="-"/>
+        <Button
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="decrement"
+            android:text="-"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Price"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:textAllCaps="true" />
 
@@ -49,15 +60,17 @@
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$0"
+        android:text=" Total: $0"
         android:textSize="16sp"
         android:textColor="#000000"
         android:layout_marginBottom="16dp"/>
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ORDER"
         android:onClick="submitOrder"/>
+
 
 </LinearLayout>
