--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,16 +51,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Price"
+        android:text="ORDER SUMMARY"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:textAllCaps="true" />
 
     <TextView
-        android:id="@+id/price_text_view"
+        android:id="@+id/order_summary_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Total: $ 0"
+        android:text="$ 0"
         android:textSize="16sp"
         android:textColor="#000000"
         android:layout_marginBottom="16dp"/>
