--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,26 @@
     android:orientation="vertical"
     tools:context="com.example.android.justjava.MainActivity">
 
-    
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Toppings"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:textAllCaps="true" />
+
+    <CheckBox
+        android:id="@+id/whipped_cream_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Whipped cream"
+        android:layout_marginBottom="16sp"
+        android:textSize="16sp"
+        android:paddingLeft="16sp"/>
+
+
+
         <TextView
             android:id="@+id/quantity"
             android:layout_width="wrap_content"
