--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,13 @@
     tools:context="com.example.android.justjava.MainActivity">
 
 
+    <EditText
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="16sp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
